--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
 </head>
 <body>
 <h1>Collaborative Drawing</h1>
+<div class="controls">
+    <label for="color-picker">Choose Color: </label>
+    <input type="color" id="color-picker" value="#000000">
+</div>
 <canvas id="canvas"></canvas>
 <script src="https://cdn.socket.io/4.8.1/socket.io.min.js" integrity="sha384-mkQ3/7FUtcGyoppY6bz/PORYoGqOl7/aSUMn2ymDOJcapfS6PHqxhRTMh1RR0Q6+" crossorigin="anonymous"></script>
 <script src="script.js"></script>
