--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     <label for="color-picker">Choose Color: </label>
     <input type="color" id="color-picker" value="#000000">
     <button id="eraser-button">Eraser</button>
+    <button id="clear-button">Clear</button>
+
 </div>
 <canvas id="canvas"></canvas>
 
