background color and save button

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,9 @@
     <input type="color" id="color-picker" value="#000000">
     <button id="eraser-button">Eraser</button>
     <button id="clear-button">Clear</button>
-
+    <button id="save-button">Save</button>
+    <label for="background-color">Background color</label>
+    <input type="color" id="background-color" value="#FFFFFF">
 </div>
 <canvas id="canvas"></canvas>
 
