--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 <body>
 <h1>Collaborative Drawing</h1>
 <div class="controls">
+    <h2 id="live-users">Live Users: 0</h2>
     <label for="color-picker">Choose Color: </label>
     <input type="color" id="color-picker" value="#000000">
     <button id="eraser-button">Eraser</button>
